apps/kube/jobboard/manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: jobboard-route
    namespace: kbve
spec:
    parentRefs:
        - name: kbve-gateway
          namespace: kbve
    hostnames:
        - jobs.kbve.com
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: jobboard-service
                port: 5400
